<resources>
    <string name="app_name">DedeZap</string>
    <string name="nomeCadastro">Digite seu nome</string>
    <string name="logoDescricao">Logo Whatsapp</string>
    <string name="btnCadastrar">Cadastrar</string>
    <string name="viewValidacao">Validação</string>
    <string name="msgValidacao">Você recebeu um SMS para validação de seu numero, digit o código de validação abaixo</string>
    <string name="btnValidacao">Validar</string>
    <string name="btnEntra">Entrar</string>
    <string name="viewCadastrar">Não possui conta? Cadastre-se</string>
    <string name="item_config">Configuracao</string>
    <string name="item_sair">Sair</string>
    <string name="item_pesquisa">Pesquisa</string>
    <string name="item_add">Adcionar Contato</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
