<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="andre.com.whatsapp.activity.ValidadorActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/larguro_logo"
        android:layout_height="@dimen/altura_logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="@string/viewValidacao"
        android:textColor="@color/textColorPrimary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:text="@string/msgValidacao"
        android:textColor="@color/textColorPrimary"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/edtValidar"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="Digite o código!"
        android:inputType="number"
        android:textColor="@color/textColorPrimary" />

    <Button
        android:id="@+id/btnValidar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edtValidar"
        android:layout_marginTop="25dp"
        android:background="@color/colorPrimaryDark"
        android:inputType="number"
        android:text="@string/btnValidacao" />
</RelativeLayout>
