<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_vertical|center_horizontal"
    tools:context="andre.com.whatsapp.activity.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/larguro_logo"
        android:layout_height="@dimen/altura_logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/logoDescricao"
        app:srcCompat="@drawable/logo"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="6dp" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="41dp"
        android:ems="10"
        android:hint="E-mail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edtSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edtEmail"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="Senha"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edtSenha"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btnEntra"
        android:theme="@style/btnPadrao"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnEntrar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:onClick="abrirCadastroUser"
        android:text="@string/viewCadastrar"
        android:textColor="@android:color/white" />

</RelativeLayout>
